--- a/docassemble/USCISApplications/data/questions/main.yml
+++ b/docassemble/USCISApplications/data/questions/main.yml
@@ -22,6 +22,9 @@ metadata:
   al_weaver_version: "playground"
   generated_on: "2024-02-04"
 ---
+features:
+  javascript: actions.js
+---
 code: |
   # This controls the default country and list of states in address field questions
   AL_DEFAULT_COUNTRY = "US"
@@ -87,8 +90,10 @@ code: |
     user.signpost
     user.complete
 
-  if application_kind == "ead_and_tps" and any([users[0].q8a, users[0].q8b, users[0].q8c, users[0].q9a, users[0].q9b, users[0].q9c, users[0].q10a, users[0].q10b, users[0].q10c, users[0].q11, users[0].q12a, users[0].q12b, users[0].q12c, users[0].q12d, users[0].q12e, users[0].q13a, users[0].q13b, users[0].q13c, users[0].q13d, users[0].q14a, users[0].q14b, users[0].q14c, users[0].q14d, users[0].q15a, users[0].q15b, users[0].q15c, users[0].q16, users[0].q17, users[0].q18a, users[0].q18b, users[0].q18c, users[0].q19, users[0].q20a, users[0].q20b, users[0].q20c, users[0].q20d, users[0].q20e, users[0].q21, users[0].q22, users[0].q23a, users[0].q23b, users[0].q23c, users[0].q24, users[0].q25, users[0].q26, users[0].q27, users[0].q28, users[0].q29, users[0].q30a, users[0].q30b, users[0].q30c, users[0].q30d, users[0].q30e, users[0].q31a, users[0].q31b, users[0].q32, users[0].q33, users[0].q34, users[0].q35, users[0].q36, users[0].q37a, users[0].q37b, users[0].q38a, users[0].q38b, users[0].q38c, users[0].q38d, users[0].q38e, users[0].q39a, users[0].q39b, users[0].q40, users[0].q41]):
-    explain_add_explanations
+  if application_kind == "ead_and_tps" and any([any([user.q8a, user.q8b, user.q8c, user.q9a, user.q9b, user.q9c, user.q10a, user.q10b, user.q10c, user.q11, user.q12a, user.q12b, user.q12c, user.q12d, user.q12e, user.q13a, user.q13b, user.q13c, user.q13d, user.q14a, user.q14b, user.q14c, user.q14d, user.q15a, user.q15b, user.q15c, user.q16, user.q17, user.q18a, user.q18b, user.q18c, user.q19, user.q20a, user.q20b, user.q20c, user.q20d, user.q20e, user.q21, user.q22, user.q23a, user.q23b, user.q23c, user.q24, user.q25, user.q26, user.q27, user.q28, user.q29, user.q30a, user.q30b, user.q30c, user.q30d, user.q30e, user.q31a, user.q31b, user.q32, user.q33, user.q34, user.q35, user.q36, user.q37a, user.q37b, user.q38a, user.q38b, user.q38c, user.q38d, user.q38e, user.q39a, user.q39b, user.q40, user.q41]) for user in users]):
+    for user in users:
+      if any([user.q8a, user.q8b, user.q8c, user.q9a, user.q9b, user.q9c, user.q10a, user.q10b, user.q10c, user.q11, user.q12a, user.q12b, user.q12c, user.q12d, user.q12e, user.q13a, user.q13b, user.q13c, user.q13d, user.q14a, user.q14b, user.q14c, user.q14d, user.q15a, user.q15b, user.q15c, user.q16, user.q17, user.q18a, user.q18b, user.q18c, user.q19, user.q20a, user.q20b, user.q20c, user.q20d, user.q20e, user.q21, user.q22, user.q23a, user.q23b, user.q23c, user.q24, user.q25, user.q26, user.q27, user.q28, user.q29, user.q30a, user.q30b, user.q30c, user.q30d, user.q30e, user.q31a, user.q31b, user.q32, user.q33, user.q34, user.q35, user.q36, user.q37a, user.q37b, user.q38a, user.q38b, user.q38c, user.q38d, user.q38e, user.q39a, user.q39b, user.q40, user.q41]):
+        user.explain_add_explanations
 
   store_variables_snapshot(
       persistent=True,
@@ -99,7 +104,6 @@ code: |
       },
   )
   children_for_retainer
-  convert_units
   download_completed_ea_application
 ---
 code: |
@@ -389,12 +393,371 @@ buttons:
 ---
 id: explain_add_explanations
 question: |
-  You answered "yes" to one of the TPS screening questions
+  ${ users[i] } answered "yes" to one of the TPS screening questions
 subquestion: |
   Call a supervisor to help draft a response to each "yes" answer
   that explains it to USCIS.
+
+  ${ len([any([user.q8a, user.q8b, user.q8c, user.q9a, user.q9b, user.q9c, user.q10a, user.q10b, user.q10c, user.q11, user.q12a, user.q12b, user.q12c, user.q12d, user.q12e, user.q13a, user.q13b, user.q13c, user.q13d, user.q14a, user.q14b, user.q14c, user.q14d, user.q15a, user.q15b, user.q15c, user.q16, user.q17, user.q18a, user.q18b, user.q18c, user.q19, user.q20a, user.q20b, user.q20c, user.q20d, user.q20e, user.q21, user.q22, user.q23a, user.q23b, user.q23c, user.q24, user.q25, user.q26, user.q27, user.q28, user.q29, user.q30a, user.q30b, user.q30c, user.q30d, user.q30e, user.q31a, user.q31b, user.q32, user.q33, user.q34, user.q35, user.q36, user.q37a, user.q37b, user.q38a, user.q38b, user.q38c, user.q38d, user.q38e, user.q39a, user.q39b, user.q40, user.q41]) for user in users]) }
+  applicant(s) have "yes" answers to the screeners on the 821.
 # TODO: add space to actually add the explanations here
-continue button field: explain_add_explanations
+fields:
+  - Explain your answer to 8a:  users[i].q8a_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q8a
+  - Explain your answer to 8b:  users[i].q8b_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q8b
+  - Explain your answer to 8c:  users[i].q8c_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q8c
+  - Explain your answer to 9a:  users[i].q9a_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q9a
+  - Explain your answer to 9b:  users[i].q9b_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q9b
+  - Explain your answer to 9c:  users[i].q9c_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q9c
+  - Explain your answer to 10a: users[i].q10a_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q10a
+  - Explain your answer to 10b: users[i].q10b_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q10b
+  - Explain your answer to 10c: users[i].q10c_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q10c
+  - Explain your answer to 11:  users[i].q11_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q11
+  - Explain your answer to 12a: users[i].q12a_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q12a
+  - Explain your answer to 12b: users[i].q12b_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q12b
+  - Explain your answer to 12c: users[i].q12c_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q12c
+  - Explain your answer to 12d: users[i].q12d_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q12d
+  - Explain your answer to 12e: users[i].q12e_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q12e
+  - Explain your answer to 13a: users[i].q13a_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q13a
+  - Explain your answer to 13b: users[i].q13b_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q13b
+  - Explain your answer to 13c: users[i].q13c_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q13c
+  - Explain your answer to 13d: users[i].q13d_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q13d
+  - Explain your answer to 14a: users[i].q14a_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q14a
+  - Explain your answer to 14b: users[i].q14b_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q14b
+  - Explain your answer to 14c: users[i].q14c_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q14c
+  - Explain your answer to 14d: users[i].q14d_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q14d
+  - Explain your answer to 15a: users[i].q15a_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q15a
+  - Explain your answer to 15b: users[i].q15b_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q15b
+  - Explain your answer to 15c: users[i].q15c_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q15c
+  - Explain your answer to 16:  users[i].q16_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q16
+  - Explain your answer to 17:  users[i].q17_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q17
+  - Explain your answer to 18a: users[i].q18a_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q18a
+  - Explain your answer to 18b: users[i].q18b_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q18b
+  - Explain your answer to 18c: users[i].q18c_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q18c
+  - Explain your answer to 19:  users[i].q19_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q19
+  - Explain your answer to 20a: users[i].q20a_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q20a
+  - Explain your answer to 20b: users[i].q20b_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q20b
+  - Explain your answer to 20c: users[i].q20c_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q20c
+  - Explain your answer to 20d: users[i].q20d_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q20d
+  - Explain your answer to 20e: users[i].q20e_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q20e
+  - Explain your answer to 21:  users[i].q21_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q21
+  - Explain your answer to 22:  users[i].q22_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q22
+  - Explain your answer to 23a: users[i].q23a_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q23a
+  - Explain your answer to 23b: users[i].q23b_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q23b
+  - Explain your answer to 23c: users[i].q23c_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q23c
+  - Explain your answer to 24:  users[i].q24_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q24
+  - Explain your answer to 25:  users[i].q25_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q25
+  - Explain your answer to 26:  users[i].q26_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q26
+  - Explain your answer to 27:  users[i].q27_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q27
+  - Explain your answer to 28:  users[i].q28_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q28
+  - Explain your answer to 29:  users[i].q29_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q29
+  - Explain your answer to 30a: users[i].q30a_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q30a
+  - Explain your answer to 30b: users[i].q30b_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q30b
+  - Explain your answer to 30c: users[i].q30c_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q30c
+  - Explain your answer to 30d: users[i].q30d_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q30d
+  - Explain your answer to 30e: users[i].q30e_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q30e
+  - Explain your answer to 31a: users[i].q31a_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q31a
+  - Explain your answer to 31b: users[i].q31b_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q31b
+  - Explain your answer to 32:  users[i].q32_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q32
+  - Explain your answer to 33:  users[i].q33_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q33
+  - Explain your answer to 34:  users[i].q34_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q34
+  - Explain your answer to 35:  users[i].q35_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q35
+  - Explain your answer to 36:  users[i].q36_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q36
+  - Explain your answer to 37a: users[i].q37a_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q37a
+  - Explain your answer to 37b: users[i].q37b_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q37b
+  - Explain your answer to 38a: users[i].q38a_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q38a
+  - Explain your answer to 38b: users[i].q38b_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q38b
+  - Explain your answer to 38c: users[i].q38c_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q38c
+  - Explain your answer to 38d: users[i].q38d_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q38d
+  - Explain your answer to 38e: users[i].q38e_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q38e
+  - Explain your answer to 39a: users[i].q39a_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q39a
+  - Explain your answer to 39b: users[i].q39b_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q39b
+  - Explain your answer to 40:  users[i].q40_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q40
+  - Explain your answer to 41:  users[i].q41_explanation
+    datatype: area
+    show if:
+      code: |
+        users[i].q41
+continue button field: users[i].explain_add_explanations
 ---
 id: download_completed_ea_application
 event: download_completed_ea_application
